# OSHomeworkAFS

./: .gitignore  CMakeLists.txt  README.mkd
include/: gconfig.hpp  ghelper.hpp
include/afs/: all.hpp
include/afs/attribute/: attribute.hpp  dir_attr.hpp  file_attr.hpp  flag.hpp
include/afs/env/: env.hpp
include/afs/fscore/: fscore.hpp
include/afs/fsinfo/: fsinfo.hpp
include/afs/fsinterface/: fsinterface.hpp  fsinterface_helper.hpp
include/afs/inode/: inode.hpp
include/afs_ls/: afs_ls.hpp
include/afs_rmuser/: afs_rmuser.hpp
include/helper/: array_end.hpp
src/: ghelper.cpp  main.cpp
src/afs/fscore/: fscore.cpp
src/afs/fsinterface/: fsinterface.cpp  fsinterface_helper.cpp
src/afs/inode/: inode.cpp
src/afs_adduser/: main.cpp
src/afs_chmod/: main.cpp
src/afs_createfs/: main.cpp
src/afs_ls/: main.cpp
src/afs_read/: main.cpp
src/afs_rm/: main.cpp
src/afs_rmuser/: main.cpp
src/afs_touch/: main.cpp
src/afs_write/: main.cpp
test/: test001.cpp
